# Operator-Spectral-Truncated-Priors-for-QAOA

./: .gitignore  README.md  index.html  pyrightconfig.json
experiments/qaoa/: run_transcriptomic_headline_benchmark.py  run_transcriptomic_matched_budget.py
notebooks/: bio_demo.ipynb  qaoa_demo.ipynb  quantum_ai_bio_combined.ipynb
outputs/tables/: nature_additions.json  smoke_matched_budget_fast_detailed.csv  smoke_matched_budget_fast_meta.json  smoke_matched_budget_fast_summary.csv  smoke_matched_budget_fast_tqa_grid.csv
research_paper/: main.tex
src/qaoa/: transcriptomic.py
submission/: main.bbl  main.tex  refs.bib
submission/code/: README.md  bench_cpu.cpp  bench_cpu.py  debug_perf.py  environment.yml  fig01_statevector_grid.py  fig02_efficiency_adjusted.py  fig03_heldout_quality.py  fig04_trust_region_concept.py  fig05_expanded_benchmark.py  generate_all.py  make_jmlr_mirror_artifacts.py  multiseed_robustness.py  pyproject.toml  reproduce.sh  requirements.txt  table01_computational_efficiency.py  table01_expanded.py  table02_bound_verification.py  table03_ablation.py  trace_evaluations.py  uq_qaoa_core.py  uq_qaoa_pipeline.cpp
submission/code/.mplconfig/: fontlist-v390.json
submission/code/configs/: p3_main.yaml  p4_validation.yaml  p5_validation.yaml  p6_validation.yaml  p7_hpc_stress.yaml  p7_large_cpu.yaml
submission/code/cpp/: CMakeLists.txt  bench_qaoa.cpp  eval_qaoa_batch.cpp  qaoa_cpu.cpp  qaoa_cpu.hpp  tests.cpp
submission/code/cpp/include/qaoa/: evaluator.hpp  graph.hpp  hardware_info.hpp  maxcut_cost.hpp  qaoa_cpu.hpp  statevector.hpp  timer.hpp  types.hpp
submission/code/cpp/src/: qaoa_cpu.cpp
submission/code/cpp/tests/: test_qaoa_cpu.cpp
submission/code/python/uq_qaoa/: __init__.py  baselines.py  calibration.py  config.py  finite_shots.py  graphs.py  hardware.py  maxcut.py  metrics.py  plotting.py  posterior.py  priors.py  qaoa_angles.py  reproduce.py  reproducibility.py  search_policy.py  statevector.py  tables.py  traces.py
submission/code/python/uq_qaoa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
submission/code/results/: calibration_curve_p3.csv  calibration_p3.csv  finite_shots_p3.csv  graph_n10_p3.csv  graph_n10_p6.csv  graph_n10_p7.csv  graph_n12_p3.csv  graph_n12_p6.csv  graph_n12_p7.csv  graph_n14_p3.csv  graph_n14_p6.csv  graph_n14_p7.csv  graph_n8_p3.csv  graph_n8_p6.csv  graph_n8_p7.csv  multiseed_agg.json  multiseed_results.csv  operator_spectral_results.csv  operator_spectral_traces.csv  python_cpp_validation.csv  reproduction_metadata.json  summary_p3.csv  summary_p6.csv  summary_p7.csv  traces_p3.csv  traces_p6.csv  traces_p7.csv  trust_region_coverage_p3.csv
submission/code/results/hpc/: bench_smoke.csv
submission/code/scripts/: collect_hardware_info.py  make_figures.py  make_tables.py  reproduce_paper.py  run_ablation.py  run_all_small.py  run_calibration.py  run_finite_shots.py  run_higher_depth.py  run_hpc_benchmark.py  run_main_experiment.py  run_python_cpp_validation.py  validate_all.py
submission/code/tables/: bench_cpu.csv  bench_cpu_cpp.csv  bench_cpu_kernels.csv  bench_cpu_scaling.csv  bench_thread_scaling.csv  paired_uq_vs_tqa_expanded.csv  per_instance_expanded.csv  table01_computational_efficiency.csv  table01_expanded.csv  table01_headline.csv  table01_headline.tex  table02_ablation.csv  table02_ablation.tex  table02_ablation_raw.csv  table02_bound_verification.csv  table03_ablation.csv  table03_manifest.tex  table04_per_family.csv  table04_per_family.tex  table05_truncation.csv  table05_truncation.tex  table05_truncation_raw.csv  table06_multiseed.tex  table_ablation.tex  table_ablation_p3.csv  table_calibration.tex  table_finite_shots.tex  table_higher_depth.tex  table_hpc_benchmark.tex  table_main_p3.tex  table_prior_summary.tex  table_python_cpp_validation.tex  table_summary_p3.tex  table_summary_p6.tex  table_summary_p7.tex  trace_all_evaluations.csv
submission/code/tests/: test_core.py
website/: index.html
website/notebooks_html/: bio_demo.html  qaoa_demo.html  quantum_ai_bio_combined.html
