[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uq-qaoa"
version = "1.2.0"
description = "Noncommutative operator-spectral truncated priors (OST-QAOA) for query-efficient QAOA parameter search: installable package and deterministic manuscript artifact."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Molena Huynh", email = "molena.huynh@jmp.com"}]
maintainers = [{name = "Molena Huynh", email = "molena.huynh@jmp.com"}]
keywords = [
    "QAOA",
    "quantum-optimization",
    "graph-neural-networks",
    "operator-valued-kernels",
    "spectral-truncation",
    "uncertainty-quantification",
    "trust-region",
    "MaxCut",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24,<3",
    "scipy>=1.10,<2",
    "pandas>=2.0,<4",
    "pyyaml>=6.0,<7",
    "networkx>=3.0,<4",
    "matplotlib>=3.7,<4",
    "scikit-learn>=1.2,<2",
]

[project.optional-dependencies]
test = ["pytest>=7.0,<9"]

[project.urls]
Homepage = "https://github.com/thmolena/Hybrid-Quantum-Graph-AI-QAOA-GNN-Biomedical-Optimization"
Repository = "https://github.com/thmolena/Hybrid-Quantum-Graph-AI-QAOA-GNN-Biomedical-Optimization"

[project.scripts]
uqqaoa-reproduce = "uq_qaoa.reproduce:main"
uqqaoa-artifacts = "uq_qaoa.paper_artifacts:main"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
include = ["uq_qaoa*"]
