cmake_minimum_required(VERSION 3.16)
project(uq_qaoa_cpu LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(OpenMP QUIET)
find_package(Threads REQUIRED)
add_library(qaoa_cpu STATIC src/qaoa_cpu.cpp)
target_compile_options(qaoa_cpu PRIVATE -O3)
target_include_directories(qaoa_cpu PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(qaoa_cpu PUBLIC Threads::Threads)
if(OpenMP_CXX_FOUND)
  target_link_libraries(qaoa_cpu PUBLIC OpenMP::OpenMP_CXX)
  target_compile_definitions(qaoa_cpu PUBLIC QAOA_HAS_OPENMP=1)
endif()
add_executable(eval_qaoa_batch eval_qaoa_batch.cpp)
target_link_libraries(eval_qaoa_batch PRIVATE qaoa_cpu)
add_executable(bench_qaoa bench_qaoa.cpp)
target_link_libraries(bench_qaoa PRIVATE qaoa_cpu)
add_executable(test_qaoa_cpu tests/test_qaoa_cpu.cpp)
target_link_libraries(test_qaoa_cpu PRIVATE qaoa_cpu)
enable_testing()
add_test(NAME qaoa_cpu_tests COMMAND test_qaoa_cpu)
